1.3.1:
-----
    * Minor changes in the workflow, while sync came to early

1.3.0:
-----
    * Added mediaembed (see media icon) CKEDITOR Plugin, to not need to turn off ACF Filter for iframed media items
    * Added new Serendipity 1.7.1 'backend_plugins_update' update hook to trigger installation deflating routines on upgrades
    * Updated CKEDITOR Library to version 4.1.3
    * Added additional lang notes for manually added CKEDITOR-Plugin placements in the config

1.2.2:
-----
    * Added Serendipity Media Library

1.2.1:
-----
    * Fixed bug in upgrade check

1.2.0:
-----
    * Update to CKEDITOR 4.1.2, 2013, June 10
    * Added Plugin option to set ACF off (default false)