@@ -1,6 +1,7 @@
 1.3.1:
 -----
     * Minor changes in the workflow, while sync came to early
+    * Fixed bug not showing media library button if not using other hooked-in plugins (thanks to ICE)
 
 1.3.0:
 -----
